--- a/helm/harvester/values/values-dev.yaml
+++ b/helm/harvester/values/values-dev.yaml
@@ -3,7 +3,7 @@ harvester:
   # enable harvester
   enabled: true
   # container image and tag
-  image:
-    repository: ghcr.io/wguanicedew/harvester
-    tag: "wguan0.0.19"
-    # tag: "master"
+  # image:
+  #   repository: ghcr.io/wguanicedew/harvester
+  #   tag: "wguan0.0.19"
+  #   # tag: "master"
