--- a/helm/panda/charts/server/templates/statefulset.yaml
+++ b/helm/panda/charts/server/templates/statefulset.yaml
@@ -118,6 +118,8 @@ spec:
                mountPath: /opt/panda/etc/config_json
              - name: {{ include "server.fullname" . }}-auth
                mountPath: /opt/panda/etc/panda/auth
+             - name: {{ include "server.fullname" . }}-token-cache
+               mountPath: /opt/panda/etc/panda/token_cache_config.json
              - name: {{ include "server.fullname" . }}-sandbox
                mountPath: /opt/panda/sandbox
              - name: {{ include "server.fullname" . }}-certs
@@ -158,6 +160,9 @@ spec:
         - name: {{ include "server.fullname" . }}-auth
           secret:
               secretName: {{ .Values.global.secret }}-panda-auth
+        - name: {{ include "server.fullname" . }}-token-cache
+        secret:
+          secretName: {{ .Values.global.secret }}-panda-token-cache
         - name: {{ include "server.fullname" . }}-sandbox
           projected:
             sources:
