--- a/secrets/templates/panda.yaml
+++ b/secrets/templates/panda.yaml
@@ -111,7 +111,7 @@ metadata:
   name: {{ include "secrets.fullname" . }}-panda-token-cache
 type: Opaque
 stringData:
-  {{- $token_cache := Values.auth.oidc.token_cache }}
+  {{- $token_cache := $.Values.auth.oidc.token_cache }}
   token_cache_config.json |-
     {{ $.Files.Get "files/panda_token_cache/token_cache_config.json.template" | replace "NAME" $token_cache.client_name | replace "ID" $token_cache.client_id | replace "SECRET" $token_cache.client_secret | replace "ENDPOINT" $token_cache.endpoint }}
   {{ end }}
