--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -30,6 +30,11 @@ auth:
         client_id: "FIXME"
         client_secret: "FIXME"
         robot_ids: "FIXME"
+    token_cache:
+        client_name: "pilot_server"
+        client_id: "FIXME"
+        client_secret: "FIXME"
+        endpoint: "https://panda-iam-doma.cern.ch/token"
 
 
 msgsvc:
