--- a/helm/panda/charts/server/templates/statefulset.yaml
+++ b/helm/panda/charts/server/templates/statefulset.yaml
@@ -119,7 +119,7 @@ spec:
              - name: {{ include "server.fullname" . }}-auth
                mountPath: /opt/panda/etc/panda/auth
              - name: {{ include "server.fullname" . }}-token-cache
-               mountPath: /opt/panda/etc/panda/token_cache_config.json
+               mountPath: /opt/panda/etc/panda
              - name: {{ include "server.fullname" . }}-sandbox
                mountPath: /opt/panda/sandbox
              - name: {{ include "server.fullname" . }}-certs
