auto config to use short-lived access tokens for internal communication

--- a/secrets/templates/harvester.yaml
+++ b/secrets/templates/harvester.yaml
@@ -25,8 +25,14 @@ stringData:
   {{- end }}
   {{- end }}
 
+  {{- if .Values.auth.auth_client_id }}
+  # use internal token file instead of long-lived token string
+  PANDA_AUTH_ID_TOKEN: "file:/opt/harvester/etc/auth_tokens/panda_token"
+  PANDA_AUTH_VO: {{ .Values.auth.authVO }}.internal
+  {{- else }}
   PANDA_AUTH_ID_TOKEN: {{ .Values.auth.authIdToken }}
   PANDA_AUTH_VO: {{ .Values.auth.authVO }}
+  {{- end }}
   PANDA_BEHIND_REAL_LB: "1"
   PANDA_VERIFY_HOST: "off"
   PANDA_URL: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/server/panda"
@@ -66,6 +72,15 @@ data:
   {{- range $path, $_ := .Files.Glob "files/harvester_auth/*" }}
   {{ base $path }}: |-
     {{ $.Files.Get $path | b64enc }}
+  {{- end }}
+  # add the internal token config file exists when it is not provided
+  {{- if .Values.auth.auth_client_id }}
+  {{- $internal_token_conf := "files/harvester_auth/token_panda-internal_client.json" }}
+  {{- if not (.Files.Glob $internal_token_conf) }}
+  token_panda-internal_client.json: |-
+    {{- $issuer := regexReplaceAll "[^/]*$" .Values.auth.auth_endpoint "" }}
+    {{ dict "issuer" $issuer "client_id" .Values.auth.auth_client_id "client_secret" .Values.auth.auth_client_secret | toJson | b64enc }}
+  {{- end }}
   {{- end }}
 
 ---
