--- a/secrets/templates/panda.yaml
+++ b/secrets/templates/panda.yaml
@@ -24,8 +24,14 @@ stringData:
   PANDA_BEHIND_REAL_LB: "1"
   PANDA_VERIFY_HOST: "off"
   PANDA_AUTH: "oidc"
+  {{- if .Values.auth.auth_client_id }}
+  # use internal token file instead of long-lived token string
+  PANDA_AUTH_ID_TOKEN: "file:/tmp/proxies/panda_internal_token"
+  PANDA_AUTH_VO: {{ .Values.auth.authVO }}.internal
+  {{- else }}
   PANDA_AUTH_ID_TOKEN: {{ .Values.auth.authIdToken }}
   PANDA_AUTH_VO: {{ .Values.auth.authVO }}
+  {{- end }}
 
   {{- if .Values.panda.hostName }}
   PANDA_HOSTNAME: "{{ .Values.panda.hostName }}"
@@ -102,6 +108,11 @@ stringData:
   {{ $client.name }}_auth_config.json: |-
     {{ $.Files.Get "files/panda_auths/auth_config.json.template" | replace "ROBOT_IDS" $client.robot_ids | replace "ID" $client.client_id | replace "SECRET" $client.client_secret | replace "URL" $config_url | replace "AUDIENCE" $audience  | replace "NAME" $client.name }}
   {{ end }}
+  # add internal auth config if auth_client_id is set
+  {{- if .Values.auth.auth_client_id }}
+  {{ $.Values.auth.authVO }}.internal_auth_config.json: |-
+    {{ $.Files.Get "files/panda_auths/auth_config.json.template" | replace "ROBOT_IDS" .Values.auth.auth_client_id | replace "ID" .Values.auth.auth_client_id | replace "URL" .Values.auth.auth_endpoint | replace "AUDIENCE" .Values.auth.oidc.audience | replace "NAME" "internal" }}
+  {{- end }}
 
 ---
 # token cache
@@ -112,8 +123,13 @@ metadata:
 type: Opaque
 stringData:
   {{- $token_cache := $.Values.auth.oidc.token_cache }}
+  {{- $token_cache_dict := dict $token_cache.client_name (dict "client_id" $token_cache.client_id "secret" $token_cache.client_secret "endpoint" $token_cache.endpoint "use_token_key" true) }}
+  # add internal token cache entry if auth_client_id is set
+  {{- if .Values.auth.auth_client_id }}
+    {{- $token_cache_dict := merge $token_cache_dict (dict "internal" (dict "client_id" .Values.auth.auth_client_id "secret" .Values.auth.auth_client_secret "endpoint" .Values.auth.auth_endpoint "token_file_path" "/tmp/proxies/panda_internal_token")) }}
+  {{- end }}
   token_cache_config.json: |-
-    {{ $.Files.Get "files/panda_token_cache/token_cache_config.json.template" | replace "NAME" $token_cache.client_name | replace "ID" $token_cache.client_id | replace "SECRET" $token_cache.client_secret | replace "ENDPOINT" $token_cache.endpoint }}
+    {{ $token_cache_dict | toJson }}
 
 ---
 apiVersion: v1
