--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -7,8 +7,14 @@ affix: "-FIXME"
 
 auth:
   auth: "oidc"
+  # A long-lived ID token for internal communication. Leave this empty if you prefer short-lived access tokens.
   authIdToken: "FIXME"
   authVO: "panda_dev"
+  # To use short-lived access tokens generated with a client ID and secret (instead of the long-lived ID token) for internal communication.
+  # Uncomment and update the three auth_ lines below.
+  #auth_client_id: "FIXME"
+  #auth_client_secret: "FIXME"
+  #auth_endpoint: "https://panda-iam-doma.cern.ch/token"
 
   oidc:
     # default audience and config_url
