--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -5,8 +5,8 @@ on:
     paths:
       - 'helm/**'
   push:
-    branches:
-      - main
+#    branches:
+#      - main
     paths:
       - 'helm/**'
   release:
