Add support for global.existingTlsSecret to bigmon and panda
This is useful if you want to use TLS certificates from an existing
secret, such as cert-manager issued certificates. If existingTlsSecret
is defined to a non-false value, it will ignore the certificates in the
helm chart files.

--- a/helm/bigmon/charts/main/templates/statefulset.yaml
+++ b/helm/bigmon/charts/main/templates/statefulset.yaml
@@ -125,8 +125,19 @@ spec:
           configMap:
               name: {{ include "main.fullname" . }}-sandbox
         - name: {{ include "main.fullname" . }}-certs
+          {{- if .Values.global.existingTlsSecret }}
+          secret:
+              secretName: {{ .Values.global.existingTlsSecret }}
+              items:
+                # Map the TLS keys to the filenames bigmon expects
+                - key: tls.crt
+                  path: hostcert.pem
+                - key: tls.key
+                  path: hostkey.pem
+          {{- else }}
           secret:
               secretName: {{ .Values.global.secret }}-bigmon-certs
+          {{- end }}
   {{- if .Values.persistentvolume.create }}
         - name: {{ include "main.fullname" . }}-logs
           persistentVolumeClaim:
