--- a/secrets/templates/bigmon.yaml
+++ b/secrets/templates/bigmon.yaml
@@ -87,6 +87,9 @@ stringData:
 
 ---
 # certs
+# Ingest certs from on-disk .pem files
+# unless we're expecting an existing secret defined via `bigmon.existingTlsSecret`.
+{{- if not .Values.bigmon.existingTlsSecret }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -109,5 +112,6 @@ data:
     {{ $.Files.Get "files/bigmon_certs/hostcert.pem" | b64enc }}
   tls.key: |-
     {{ $.Files.Get "files/bigmon_certs/hostkey.pem" | b64enc }}
+{{- end }}
 
 {{- end }}
