--- a/secrets/templates/panda.yaml
+++ b/secrets/templates/panda.yaml
@@ -76,19 +76,6 @@ stringData:
   {{ include "set_proxy" . | indent 2 }}
 
 ---
-# certs
-apiVersion: v1
-kind: Secret
-metadata:
-  name: {{ include "secrets.fullname" . }}-panda-certs
-type: Opaque
-data:
-  {{- range $path, $_ := .Files.Glob "files/panda_certs/**.pem" }}
-  {{ base $path }}: |-
-    {{ $.Files.Get $path | b64enc }}
-  {{- end }}
-
----
 # auth
 apiVersion: v1
 kind: Secret
@@ -131,6 +118,22 @@ stringData:
   token_cache_config.json: |-
     {{ $token_cache_dict | toJson }}
 
+{{- if not .Values.panda.existingTlsSecret }}
+---
+# certs
+# Ingest certs from on-disk .pem files
+# unless we're expecting an existing secret defined via `panda.existingTlsSecret`.
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "secrets.fullname" . }}-panda-certs
+type: Opaque
+data:
+  {{- range $path, $_ := .Files.Glob "files/panda_certs/**.pem" }}
+  {{ base $path }}: |-
+    {{ $.Files.Get $path | b64enc }}
+  {{- end }}
+
 ---
 apiVersion: v1
 kind: Secret
@@ -142,5 +145,6 @@ data:
     {{ $.Files.Get "files/panda_certs/hostcert.pem" | b64enc }}
   tls.key: |-
     {{ $.Files.Get "files/panda_certs/hostkey.pem" | b64enc }}
+{{- end }}
 
 {{- end }}
