--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -67,6 +67,9 @@ msgsvc:
 
 panda:
   enabled: true
+  # If this is set to true, certificates will not be ingested from certs on-disk,
+  # See the existingTlsSecret value in bigmon and panda charts where the secret name can be set.
+  existingTlsSecret: true
 
   database:
     backend: "postgres" # or oracle
@@ -130,6 +133,9 @@ idds:
 
 bigmon:
   enabled: true
+  # If this is set to true, certificates will not be ingested from certs on-disk,
+  # See the existingTlsSecret value in bigmon and panda charts where the secret name can be set.
+  existingTlsSecret: true
 
   base_url: "FIXME"
 
